--- a/bigproject_style.css
+++ b/bigproject_style.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0rem;
-    background-color: rgb(36 34 34);
+    background-color: rgb(36 34 34);    
 }
 
 @media screen and (min-width: 800px) {
@@ -143,7 +143,8 @@ body {
 }
 
 .projects_presentation {
-    display: flex;
+    display: flex;    
+    max-width: 100%;
 }
 
 .projects_presentation img
@@ -153,6 +154,7 @@ body {
     border-radius: 10px;
     padding: 1rem;
     flex: 1;
+    max-width: 40%;    
 }
 
 .projects_presentation article {
@@ -160,6 +162,7 @@ body {
     flex-direction: column;
     align-content: stretch;
     flex: 1;
+    max-width: 60%;
 }
 
 .projects_presentation article h2 {
